src/vpp/vppParser.cpp

// Generated from vpp.g4 by ANTLR 4.6


#include "vppListener.h"

#include "vppParser.h"


using namespace antlrcpp;
using namespace antlr4;

vppParser::vppParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

vppParser::~vppParser() {
  delete _interpreter;
}

std::string vppParser::getGrammarFileName() const {
  return "vpp.g4";
}

const std::vector<std::string>& vppParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& vppParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

vppParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<vppParser::Preprocess_directiveContext *> vppParser::FileContext::preprocess_directive() {
  return getRuleContexts<vppParser::Preprocess_directiveContext>();
}

vppParser::Preprocess_directiveContext* vppParser::FileContext::preprocess_directive(size_t i) {
  return getRuleContext<vppParser::Preprocess_directiveContext>(i);
}


size_t vppParser::FileContext::getRuleIndex() const {
  return vppParser::RuleFile;
}

void vppParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void vppParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

vppParser::FileContext* vppParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, vppParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 1 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1 + 1) {
        setState(32);
        matchWildcard(); 
      }
      setState(37);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << vppParser::DEFINE)
      | (1ULL << vppParser::IFNDEF)
      | (1ULL << vppParser::UNDEF)
      | (1ULL << vppParser::IFDEF)
      | (1ULL << vppParser::BACKTICK))) != 0)) {
      setState(38);
      preprocess_directive();
      setState(42);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      while (alt != 1 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1 + 1) {
          setState(39);
          matchWildcard(); 
        }
        setState(44);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      }
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preprocess_directiveContext ------------------------------------------------------------------

vppParser::Preprocess_directiveContext::Preprocess_directiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vppParser::DefineContext* vppParser::Preprocess_directiveContext::define() {
  return getRuleContext<vppParser::DefineContext>(0);
}

vppParser::UndefContext* vppParser::Preprocess_directiveContext::undef() {
  return getRuleContext<vppParser::UndefContext>(0);
}

vppParser::ConditionalContext* vppParser::Preprocess_directiveContext::conditional() {
  return getRuleContext<vppParser::ConditionalContext>(0);
}

vppParser::Token_idContext* vppParser::Preprocess_directiveContext::token_id() {
  return getRuleContext<vppParser::Token_idContext>(0);
}


size_t vppParser::Preprocess_directiveContext::getRuleIndex() const {
  return vppParser::RulePreprocess_directive;
}

void vppParser::Preprocess_directiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocess_directive(this);
}

void vppParser::Preprocess_directiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocess_directive(this);
}

vppParser::Preprocess_directiveContext* vppParser::preprocess_directive() {
  Preprocess_directiveContext *_localctx = _tracker.createInstance<Preprocess_directiveContext>(_ctx, getState());
  enterRule(_localctx, 2, vppParser::RulePreprocess_directive);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vppParser::DEFINE: {
        enterOuterAlt(_localctx, 1);
        setState(50);
        define();
        break;
      }

      case vppParser::UNDEF: {
        enterOuterAlt(_localctx, 2);
        setState(51);
        undef();
        break;
      }

      case vppParser::IFNDEF:
      case vppParser::IFDEF: {
        enterOuterAlt(_localctx, 3);
        setState(52);
        conditional();
        break;
      }

      case vppParser::BACKTICK: {
        enterOuterAlt(_localctx, 4);
        setState(53);
        token_id();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefineContext ------------------------------------------------------------------

vppParser::DefineContext::DefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vppParser::DefineContext::DEFINE() {
  return getToken(vppParser::DEFINE, 0);
}

vppParser::Macro_idContext* vppParser::DefineContext::macro_id() {
  return getRuleContext<vppParser::Macro_idContext>(0);
}

std::vector<tree::TerminalNode *> vppParser::DefineContext::ID() {
  return getTokens(vppParser::ID);
}

tree::TerminalNode* vppParser::DefineContext::ID(size_t i) {
  return getToken(vppParser::ID, i);
}

vppParser::ReplacementContext* vppParser::DefineContext::replacement() {
  return getRuleContext<vppParser::ReplacementContext>(0);
}


size_t vppParser::DefineContext::getRuleIndex() const {
  return vppParser::RuleDefine;
}

void vppParser::DefineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefine(this);
}

void vppParser::DefineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefine(this);
}

vppParser::DefineContext* vppParser::define() {
  DefineContext *_localctx = _tracker.createInstance<DefineContext>(_ctx, getState());
  enterRule(_localctx, 4, vppParser::RuleDefine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(56);
      match(vppParser::DEFINE);
      setState(57);
      macro_id();
      setState(58);
      match(vppParser::T__0);
      setState(59);
      match(vppParser::ID);
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == vppParser::T__1) {
        setState(60);
        match(vppParser::T__1);
        setState(61);
        match(vppParser::ID);
        setState(66);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(67);
      match(vppParser::T__2);
      setState(68);
      replacement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(70);
      match(vppParser::DEFINE);
      setState(71);
      macro_id();
      setState(72);
      replacement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(74);
      match(vppParser::DEFINE);
      setState(75);
      macro_id();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReplacementContext ------------------------------------------------------------------

vppParser::ReplacementContext::ReplacementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t vppParser::ReplacementContext::getRuleIndex() const {
  return vppParser::RuleReplacement;
}

void vppParser::ReplacementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReplacement(this);
}

void vppParser::ReplacementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReplacement(this);
}

vppParser::ReplacementContext* vppParser::replacement() {
  ReplacementContext *_localctx = _tracker.createInstance<ReplacementContext>(_ctx, getState());
  enterRule(_localctx, 6, vppParser::RuleReplacement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(78);
      _la = _input->LA(1);
      if (_la == 0 || _la == Token::EOF || (_la == vppParser::T__3)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(81); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << vppParser::T__0)
      | (1ULL << vppParser::T__1)
      | (1ULL << vppParser::T__2)
      | (1ULL << vppParser::INCLUDE)
      | (1ULL << vppParser::DEFINE)
      | (1ULL << vppParser::IFNDEF)
      | (1ULL << vppParser::UNDEF)
      | (1ULL << vppParser::IFDEF)
      | (1ULL << vppParser::ELSIF)
      | (1ULL << vppParser::ELSE)
      | (1ULL << vppParser::ENDIF)
      | (1ULL << vppParser::IGNORED_DIRECTIVE)
      | (1ULL << vppParser::BACKTICK)
      | (1ULL << vppParser::ID)
      | (1ULL << vppParser::CharacterLiteral)
      | (1ULL << vppParser::StringLiteral)
      | (1ULL << vppParser::COMMENT)
      | (1ULL << vppParser::LINE_ESCAPE)
      | (1ULL << vppParser::LINE_COMMENT)
      | (1ULL << vppParser::WS)
      | (1ULL << vppParser::OTHER))) != 0));
    setState(83);
    match(vppParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UndefContext ------------------------------------------------------------------

vppParser::UndefContext::UndefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vppParser::UndefContext::UNDEF() {
  return getToken(vppParser::UNDEF, 0);
}

tree::TerminalNode* vppParser::UndefContext::ID() {
  return getToken(vppParser::ID, 0);
}


size_t vppParser::UndefContext::getRuleIndex() const {
  return vppParser::RuleUndef;
}

void vppParser::UndefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUndef(this);
}

void vppParser::UndefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUndef(this);
}

vppParser::UndefContext* vppParser::undef() {
  UndefContext *_localctx = _tracker.createInstance<UndefContext>(_ctx, getState());
  enterRule(_localctx, 8, vppParser::RuleUndef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(vppParser::UNDEF);
    setState(86);
    match(vppParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionalContext ------------------------------------------------------------------

vppParser::ConditionalContext::ConditionalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vppParser::Ifdef_directiveContext* vppParser::ConditionalContext::ifdef_directive() {
  return getRuleContext<vppParser::Ifdef_directiveContext>(0);
}

vppParser::Ifndef_directiveContext* vppParser::ConditionalContext::ifndef_directive() {
  return getRuleContext<vppParser::Ifndef_directiveContext>(0);
}


size_t vppParser::ConditionalContext::getRuleIndex() const {
  return vppParser::RuleConditional;
}

void vppParser::ConditionalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConditional(this);
}

void vppParser::ConditionalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConditional(this);
}

vppParser::ConditionalContext* vppParser::conditional() {
  ConditionalContext *_localctx = _tracker.createInstance<ConditionalContext>(_ctx, getState());
  enterRule(_localctx, 10, vppParser::RuleConditional);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vppParser::IFDEF: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        ifdef_directive();
        break;
      }

      case vppParser::IFNDEF: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        ifndef_directive();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ifdef_directiveContext ------------------------------------------------------------------

vppParser::Ifdef_directiveContext::Ifdef_directiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vppParser::Ifdef_directiveContext::IFDEF() {
  return getToken(vppParser::IFDEF, 0);
}

std::vector<tree::TerminalNode *> vppParser::Ifdef_directiveContext::ID() {
  return getTokens(vppParser::ID);
}

tree::TerminalNode* vppParser::Ifdef_directiveContext::ID(size_t i) {
  return getToken(vppParser::ID, i);
}

vppParser::Ifdef_group_of_linesContext* vppParser::Ifdef_directiveContext::ifdef_group_of_lines() {
  return getRuleContext<vppParser::Ifdef_group_of_linesContext>(0);
}

tree::TerminalNode* vppParser::Ifdef_directiveContext::ENDIF() {
  return getToken(vppParser::ENDIF, 0);
}

std::vector<tree::TerminalNode *> vppParser::Ifdef_directiveContext::ELSIF() {
  return getTokens(vppParser::ELSIF);
}

tree::TerminalNode* vppParser::Ifdef_directiveContext::ELSIF(size_t i) {
  return getToken(vppParser::ELSIF, i);
}

std::vector<vppParser::Elsif_group_of_linesContext *> vppParser::Ifdef_directiveContext::elsif_group_of_lines() {
  return getRuleContexts<vppParser::Elsif_group_of_linesContext>();
}

vppParser::Elsif_group_of_linesContext* vppParser::Ifdef_directiveContext::elsif_group_of_lines(size_t i) {
  return getRuleContext<vppParser::Elsif_group_of_linesContext>(i);
}

tree::TerminalNode* vppParser::Ifdef_directiveContext::ELSE() {
  return getToken(vppParser::ELSE, 0);
}

vppParser::Else_group_of_linesContext* vppParser::Ifdef_directiveContext::else_group_of_lines() {
  return getRuleContext<vppParser::Else_group_of_linesContext>(0);
}


size_t vppParser::Ifdef_directiveContext::getRuleIndex() const {
  return vppParser::RuleIfdef_directive;
}

void vppParser::Ifdef_directiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfdef_directive(this);
}

void vppParser::Ifdef_directiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfdef_directive(this);
}

vppParser::Ifdef_directiveContext* vppParser::ifdef_directive() {
  Ifdef_directiveContext *_localctx = _tracker.createInstance<Ifdef_directiveContext>(_ctx, getState());
  enterRule(_localctx, 12, vppParser::RuleIfdef_directive);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(vppParser::IFDEF);
    setState(93);
    match(vppParser::ID);
    setState(94);
    ifdef_group_of_lines();
    setState(100);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == vppParser::ELSIF) {
      setState(95);
      match(vppParser::ELSIF);
      setState(96);
      match(vppParser::ID);
      setState(97);
      elsif_group_of_lines();
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vppParser::ELSE) {
      setState(103);
      match(vppParser::ELSE);
      setState(104);
      else_group_of_lines();
    }
    setState(107);
    match(vppParser::ENDIF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ifndef_directiveContext ------------------------------------------------------------------

vppParser::Ifndef_directiveContext::Ifndef_directiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vppParser::Ifndef_directiveContext::IFNDEF() {
  return getToken(vppParser::IFNDEF, 0);
}

std::vector<tree::TerminalNode *> vppParser::Ifndef_directiveContext::ID() {
  return getTokens(vppParser::ID);
}

tree::TerminalNode* vppParser::Ifndef_directiveContext::ID(size_t i) {
  return getToken(vppParser::ID, i);
}

vppParser::Ifndef_group_of_linesContext* vppParser::Ifndef_directiveContext::ifndef_group_of_lines() {
  return getRuleContext<vppParser::Ifndef_group_of_linesContext>(0);
}

tree::TerminalNode* vppParser::Ifndef_directiveContext::ENDIF() {
  return getToken(vppParser::ENDIF, 0);
}

std::vector<tree::TerminalNode *> vppParser::Ifndef_directiveContext::ELSIF() {
  return getTokens(vppParser::ELSIF);
}

tree::TerminalNode* vppParser::Ifndef_directiveContext::ELSIF(size_t i) {
  return getToken(vppParser::ELSIF, i);
}

std::vector<vppParser::Elsif_group_of_linesContext *> vppParser::Ifndef_directiveContext::elsif_group_of_lines() {
  return getRuleContexts<vppParser::Elsif_group_of_linesContext>();
}

vppParser::Elsif_group_of_linesContext* vppParser::Ifndef_directiveContext::elsif_group_of_lines(size_t i) {
  return getRuleContext<vppParser::Elsif_group_of_linesContext>(i);
}

tree::TerminalNode* vppParser::Ifndef_directiveContext::ELSE() {
  return getToken(vppParser::ELSE, 0);
}

vppParser::Else_group_of_linesContext* vppParser::Ifndef_directiveContext::else_group_of_lines() {
  return getRuleContext<vppParser::Else_group_of_linesContext>(0);
}


size_t vppParser::Ifndef_directiveContext::getRuleIndex() const {
  return vppParser::RuleIfndef_directive;
}

void vppParser::Ifndef_directiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfndef_directive(this);
}

void vppParser::Ifndef_directiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfndef_directive(this);
}

vppParser::Ifndef_directiveContext* vppParser::ifndef_directive() {
  Ifndef_directiveContext *_localctx = _tracker.createInstance<Ifndef_directiveContext>(_ctx, getState());
  enterRule(_localctx, 14, vppParser::RuleIfndef_directive);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(vppParser::IFNDEF);
    setState(110);
    match(vppParser::ID);
    setState(111);
    ifndef_group_of_lines();
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == vppParser::ELSIF) {
      setState(112);
      match(vppParser::ELSIF);
      setState(113);
      match(vppParser::ID);
      setState(114);
      elsif_group_of_lines();
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vppParser::ELSE) {
      setState(120);
      match(vppParser::ELSE);
      setState(121);
      else_group_of_lines();
    }
    setState(124);
    match(vppParser::ENDIF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ifdef_group_of_linesContext ------------------------------------------------------------------

vppParser::Ifdef_group_of_linesContext::Ifdef_group_of_linesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vppParser::Group_of_linesContext* vppParser::Ifdef_group_of_linesContext::group_of_lines() {
  return getRuleContext<vppParser::Group_of_linesContext>(0);
}


size_t vppParser::Ifdef_group_of_linesContext::getRuleIndex() const {
  return vppParser::RuleIfdef_group_of_lines;
}

void vppParser::Ifdef_group_of_linesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfdef_group_of_lines(this);
}

void vppParser::Ifdef_group_of_linesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfdef_group_of_lines(this);
}

vppParser::Ifdef_group_of_linesContext* vppParser::ifdef_group_of_lines() {
  Ifdef_group_of_linesContext *_localctx = _tracker.createInstance<Ifdef_group_of_linesContext>(_ctx, getState());
  enterRule(_localctx, 16, vppParser::RuleIfdef_group_of_lines);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    group_of_lines();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ifndef_group_of_linesContext ------------------------------------------------------------------

vppParser::Ifndef_group_of_linesContext::Ifndef_group_of_linesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vppParser::Group_of_linesContext* vppParser::Ifndef_group_of_linesContext::group_of_lines() {
  return getRuleContext<vppParser::Group_of_linesContext>(0);
}


size_t vppParser::Ifndef_group_of_linesContext::getRuleIndex() const {
  return vppParser::RuleIfndef_group_of_lines;
}

void vppParser::Ifndef_group_of_linesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfndef_group_of_lines(this);
}

void vppParser::Ifndef_group_of_linesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfndef_group_of_lines(this);
}

vppParser::Ifndef_group_of_linesContext* vppParser::ifndef_group_of_lines() {
  Ifndef_group_of_linesContext *_localctx = _tracker.createInstance<Ifndef_group_of_linesContext>(_ctx, getState());
  enterRule(_localctx, 18, vppParser::RuleIfndef_group_of_lines);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    group_of_lines();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Elsif_group_of_linesContext ------------------------------------------------------------------

vppParser::Elsif_group_of_linesContext::Elsif_group_of_linesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vppParser::Group_of_linesContext* vppParser::Elsif_group_of_linesContext::group_of_lines() {
  return getRuleContext<vppParser::Group_of_linesContext>(0);
}


size_t vppParser::Elsif_group_of_linesContext::getRuleIndex() const {
  return vppParser::RuleElsif_group_of_lines;
}

void vppParser::Elsif_group_of_linesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElsif_group_of_lines(this);
}

void vppParser::Elsif_group_of_linesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElsif_group_of_lines(this);
}

vppParser::Elsif_group_of_linesContext* vppParser::elsif_group_of_lines() {
  Elsif_group_of_linesContext *_localctx = _tracker.createInstance<Elsif_group_of_linesContext>(_ctx, getState());
  enterRule(_localctx, 20, vppParser::RuleElsif_group_of_lines);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    group_of_lines();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Else_group_of_linesContext ------------------------------------------------------------------

vppParser::Else_group_of_linesContext::Else_group_of_linesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vppParser::Group_of_linesContext* vppParser::Else_group_of_linesContext::group_of_lines() {
  return getRuleContext<vppParser::Group_of_linesContext>(0);
}


size_t vppParser::Else_group_of_linesContext::getRuleIndex() const {
  return vppParser::RuleElse_group_of_lines;
}

void vppParser::Else_group_of_linesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElse_group_of_lines(this);
}

void vppParser::Else_group_of_linesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElse_group_of_lines(this);
}
